--- a/support/switch/switch.html
+++ b/support/switch/switch.html
@@ -43,10 +43,10 @@
                                 <li><a href="#">닌텐도 e숍</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
+                        <li><a href="../../software/switch_soft.html">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
                             <ul class="snb">
-                                <li><a href="#">소프트웨어 한눈에 보기</a></li>
-                                <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
+                                <li><a href="../../software/switch_soft.html">소프트웨어 한눈에 보기</a></li>
+                                <li><a href="../../software/switch_soft.html">Nintendo Switch 소프트웨어 </a></li>
                                 <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
                                 <li><a href="#">발매 예정 소프트웨어</a></li>
                                 <li><a href="#">스마트폰용 앱</a></li>
@@ -93,9 +93,9 @@
                                 <li><a href="#">닌텐도 e숍</a></li>
                             </ul>
                         </li>
-                        <li><a href="#">소프트웨어</a>
+                        <li><a href="../../software/switch_soft.html">소프트웨어</a>
                             <ul class="snb">
-                                <li><a href="#">Nintendo Switch 소프트웨어 </a></li>
+                                <li><a href="../../software/switch_soft.html">Nintendo Switch 소프트웨어 </a></li>
                                 <li><a href="#">닌텐도 3DS 소프트웨어</a></li>
                                 <li><a href="#">발매 예정 소프트웨어</a></li>
                                 <li><a href="#">스마트폰용 앱</a></li>
@@ -223,7 +223,7 @@
                 </li>
                 <li><a href="#">소프트웨어<i class="fa-regular fa-circle-down"></i></a>
                     <ul class="footer_snb">
-                        <li><a href="#">- Nintendo Switch 소프트웨어</a></li>
+                        <li><a href="../../software/switch_soft.html">- Nintendo Switch 소프트웨어</a></li>
                         <li><a href="#">- 닌텐도 3DS 소프트웨어</a></li>
                         <li><a href="#">- 발매 예정 소프트웨어</a></li>
                         <li><a href="#">- 스마트폰용 앱</a></li>
